# personal_expense_tracker

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: config.py  database.py  init_db.py  main.py  requirements.txt
backend/auth/: jwt.py
backend/models/: __init__.py  category.py  starting_balance.py  test_models.py  transaction.py  transactions.py  user.py  users.py
backend/routers/: auth.py  categories.py  reports.py  starting_balances.py  transactions.py
backend/schema/: __init__.py  auth.py  categories.py  reports.py  starting_balance.py  transactions.py
backend/services/: __init__.py  balance_calculator.py  reports_data.py  reports_generate.py
backend/utils/: __init__.py  reports.py
documentation/: api-coverage-summary.md  backend-requirements.md  design.md  endpoints.md  file_structure.md  prev_chat.md
documentation/API_Documentation/: api.md  endpoints.md
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AddCategoryModal.jsx  AddStartingBalanceModal.jsx  AddTransactionModal.jsx  Charts.jsx  LoadingSpinner.css  LoadingSpinner.jsx  MetricCard.jsx  Sidebar.jsx  TransactionList.jsx
frontend/src/data/: mockData.js
frontend/src/hooks/: useHealthCheck.js
frontend/src/lib/: api.js
frontend/src/views/: AnalyticsView.jsx  (+4 more)
sql/: schema.sql
tests/: conftest.py
tests/test_models/: test_category.py  test_starting_balance.py  test_transaction.py  test_user.py
tests/test_routers/: test_auth.py  test_categories.py  test_reports.py  test_starting-balances.py  test_transactions.py
